# arxell

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  REVIEW_FINDINGS.md  SECURITY.md  SUPPORT.md  Sheets-Readme.md  agents-status  agents.md  audio-recorder.js  flow-review.md  index.html  optimizations.md  package-lock.json  package.json  sheets-migration-guide.md  vite.config.ts
src-tauri/: Cargo.toml  IMPLEMENTATION_PLAN.md  build.rs  email_to_chris.txt  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  testA
src-tauri/.arx/: voice-settings.json
src-tauri/capabilities/: default.json  stt-capability.json
src-tauri/icons/: icon.icns
src-tauri/resources/coder/: PI_BINARIES_SHA256.txt  PI_BINARIES_VERSION.txt
src-tauri/resources/coder/agent/: Cargo.toml
src-tauri/resources/kokoro-runtime/: README.md  README.txt
src-tauri/resources/llama-runtime/: README.md
src-tauri/resources/scripts/coder/: responses_proxy.js
src-tauri/resources/scripts/voice/: stt_whisper.py  stt_whisper_persistent.py  tts_kokoro.py  tts_kokoro_persistent.py
src-tauri/resources/voice/: README.md
src-tauri/resources/voice/kokoro/: README.md
src-tauri/resources/whisper-server/: README.md  whisper-server-linux-x86_64
src-tauri/src/: api_registry.rs  app_paths.rs  contracts.rs  lib.rs  main.rs  observability.rs  test_support.rs
src-tauri/src/a2a/: mod.rs  runtime.rs  store.rs  types.rs  workflow_store.rs
src-tauri/src/agent_tools/: chart.rs  mod.rs  notepad.rs  sheets.rs  web_search.rs
src-tauri/src/ai/: client.rs  types.rs
src-tauri/src/app/: chat_service.rs  files_service.rs  flow_service.rs  image_generation_service.rs  mod.rs  model_manager_service.rs  permission_service.rs  runtime_service.rs  stt_service.rs  tasks_service.rs  terminal_service.rs  tts_service.rs  user_projects_service.rs  voice_handoff_service.rs  voice_runtime_service.rs  voice_speculation_service.rs  web_search_service.rs
src-tauri/src/audio/: capture.rs  device.rs  mod.rs  observe.rs  state.rs  stream.rs  stt.rs  tts.rs  vad.rs
src-tauri/src/commands/: a2a.rs  a2a_workflow.rs  bridge.rs  browser.rs  chat.rs  coder_runtime.rs  diagnostics.rs  logs.rs  memory.rs  mod.rs  model.rs  models.rs  project.rs  settings.rs  skills.rs  terminal.rs  tool_gateway.rs  tool_packs.rs  voice.rs  webview.rs  workspace.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/ipc/: bridge.rs  chat.rs  flow.rs  looper.rs  mod.rs  tauri_bridge.rs  terminal.rs  tool_runtime.rs  voice_commands.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/model_manager/: config.rs  engine_installer.rs  inference.rs  loader.rs  metadata.rs  mod.rs  resources.rs  system_info.rs  tokenizer.rs  types.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/services/: mod.rs  sheets_capabilities.rs  sheets_formula.rs  sheets_jsonl.rs  sheets_service.rs  sheets_source.rs  sheets_types.rs
src-tauri/src/skills/: README.md
src-tauri/src/skills/agentic-core-orchestrator/: SKILL.md
src-tauri/src/stt/: client.rs  events.rs  mod.rs  supervisor.rs
src-tauri/src/tools/: echo_tool.rs  looper_handler.rs  mod.rs  registry.rs  tests.rs  tool.rs
src-tauri/src/tools/invoke/: files.rs  flow.rs  (+6 more)
src-tauri/src/tts/: kokoro_frontend.rs  kokoro_ort.rs  kokoro_voice.rs  mod.rs  phonemizer.rs
src-tauri/src/voice/: audio_bus.rs  benchmark.rs  control_bus.rs  interruption_interface.rs  mod.rs  session.rs  settings.rs  shadow_eval.rs  stt_interface.rs  tts_interface.rs
src-tauri/src/workspace_tools/: mod.rs
src-tauri/tests/: bridge_slice_integration_tests.rs  context_management_tests.rs  inference_tests.rs  model_loading_tests.rs  model_metadata_tests.rs  skill_context_tests.rs  skill_injection_tests.rs  tts_engine_runtime_smoke.rs  voice_pipeline.rs
src-tauri/tests/common/: mod.rs
(+650 files in other folders)
