[package]
name = "app-foundation"
version = "0.1.2"
edition = "2021"

[features]
default = []
tauri-runtime = ["dep:tauri"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", optional = true , features = [] }
tauri-plugin-dialog = "2"
portable-pty = "0.8.1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
cpal = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
