[package]
name = "app-foundation"
version = "0.1.5"
edition = "2021"

[features]
default = []
tauri-runtime = ["tauri"]

[dependencies]
tauri = { version = "2", optional = true, features = ["devtools"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri-plugin-dialog = "2"
portable-pty = "0.8.1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
cpal = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
num_cpus = "1"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
