[package]
name = "arxell"
version = "0.2.1"
edition = "2021"

[lib]
name = "arxell_lite"

[features]
default = []
tauri-runtime = ["tauri"]
ironcalc-engine = []

[dependencies]
tauri = { version = "2", optional = true, features = ["devtools"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tauri-plugin-dialog = "2"
dirs = "5"
portable-pty = "0.8.1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
csv = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
cpal = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
num_cpus = "1"
libc = "0.2"
sherpa-onnx = "1.12.34"
arx_rs = { path = "../agent" }
sysinfo = "0.37"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
ironcalc = "0.7.1"
keyring = "3"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
