[package]
name = "arx_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "arx_rs"
path = "src/lib.rs"

[[bin]]
name = "arx-rs"
path = "src/bin/arx-rs.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
globset = "0.4"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "fs", "io-util"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
